feat: update product catalog with real images and flexible rental copy

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div
                   class="relative w-full aspect-video md:aspect-[4/3] bg-cover bg-center rounded-2xl shadow-2xl border-4 border-white dark:border-gray-800"
                   data-alt="Kobelco green excavator working on site"
-                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC92CHQ9hXIGrWBZhTwT0-en5tO7MkmODmESfIeXZnv8n49F0BhkBc2LPFTwz23S9eBY_npJJvVuErwvqhT8ghjAx_b7JxjQGanL6LpyM_XnpL_LdMc24acYUe--Oot5oJrqeLSUKOtLzphP4a7wLbsNLHHvgv9anT8PYK8XXq17nISZDl0x0da8rNNtP11YHCg0DmsIWYk4_G0v8dyVRJ4710TjR3ILZZevhsbR-888W1s8s-PSNqPkBIBO-DXHm_JI1sfmolomD8");'>
+                  style='background-image: url("/foto-foto/scaffoldingku-kobelco.webp");'>
                 </div>
               </div>
             </div>
@@ -179,85 +179,129 @@
                 </h3>
               </div>
               <p class="text-gray-600 dark:text-gray-400 max-w-md">Satu tempat untuk semua kebutuhan alat berat dan
-                perancah bangunan Anda. Hemat biaya mobilisasi dengan paket bundling kami.</p>
+                perancah bangunan Anda. <strong class="text-charcoal dark:text-white">Sewa fleksibel: per Jam, Harian,
+                  atau Bulanan</strong> — sesuaikan dengan kebutuhan proyek Anda.</p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+              <!-- Product 1: Excavator Kobelco -->
               <div
                 class="group flex flex-col bg-background-light dark:bg-white/5 rounded-2xl overflow-hidden border border-gray-200 dark:border-gray-800 hover:shadow-2xl transition-all hover:translate-y-[-8px]">
-                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Kobelco SK series excavator"
-                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB13mMdCF-crhXh7esHEf3IaplMLg9b_f8fdCJMVvpZEokSyAApr9Aq68bWeF4y5WofyBpaP4SXV5NEaed2Lq4i6HTk7mwA6QAnhqbdp23zAO4ZBqy7iwYoZpslMsMb9NZf0iZcNk3rCBdAoZdzHB1KY4bwoge93FJ4DHZT74FTN8tnwlhEHnErQfVskf4OSZn9ELyZ5zTd8FPK-uYpppdsh_F3YCAMwihzRMB9_l6nfaTD4q-zpaB6CGbd5AHar353rCDFDs1L6Ek");'>
+                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Excavator Kobelco"
+                  style='background-image: url("/foto-foto/scaffoldingku-kobelco.webp");'>
                 </div>
-                <div class="p-8">
-                  <div class="flex justify-between items-start mb-4">
-                    <h4 class="text-charcoal dark:text-white text-xl font-bold">Excavator SK Series (Beco)</h4>
+                <div class="p-6 flex flex-col flex-grow">
+                  <div class="flex justify-between items-start mb-3">
+                    <h4 class="text-charcoal dark:text-white text-lg font-bold">Excavator Kobelco</h4>
                     <span
-                      class="bg-primary/10 text-primary px-3 py-1 rounded-full text-xs font-bold uppercase">Ready</span>
+                      class="bg-green-500/10 text-green-600 px-2 py-0.5 rounded-full text-xs font-bold uppercase">Ready</span>
                   </div>
-                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">Unit Excavator Mini
-                    (PC50/PC75) hingga Kelas 20 Ton (PC200). Unit tahun muda, tenaga kuat, dan hemat bahan bakar.</p>
-                  <ul class="space-y-3 mb-8">
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Unit 100%
-                      Original
-                      Terawat
+                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-4 flex-grow">Unit Kobelco SK
+                    Series dengan performa tinggi. Cocok untuk pekerjaan galian, land clearing, dan konstruksi berat.
+                  </p>
+                  <ul class="space-y-2 mb-6 text-sm">
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Unit Terawat
+                      Prima
                     </li>
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Operator
-                      Sertifikasi SIO
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Operator
+                      Bersertifikasi SIO
                     </li>
                   </ul>
-                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20harga%20sewa%20excavator"
+                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20sewa%20Excavator%20Kobelco"
                     target="_blank"
-                    class="block w-full text-center py-3 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all">Cek
-                    Harga Sewa</a>
+                    class="block w-full text-center py-2.5 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all text-sm">Cek
+                    Harga</a>
                 </div>
               </div>
+
+              <!-- Product 2: Komatsu PC 78US/UU -->
               <div
                 class="group flex flex-col bg-background-light dark:bg-white/5 rounded-2xl overflow-hidden border border-gray-200 dark:border-gray-800 hover:shadow-2xl transition-all hover:translate-y-[-8px]">
-                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Standard scaffolding for construction"
-                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBrJVvcPww8yyUeQWTKN2smKSVY24XvKq26nSe4cEUV5UZrmvy2VrS7wlyCgw1bTffKcX3vj8XwzpJhEfpzZVByuh7Fp4gf7jwxXfPpfeIt7oOHiA7VdzgzfgjkcZC3_EVAZYg9fOzfdPM3pyq4m9Mlx96wEVUDEC8_uT_z7t3Py6NTGEWfbzx_h0iaffqFdMZS1H6fsROMTkykVm4cerqUdNgc-r6puv8-aBtqYX8LBKp9ihVssxyDfOPZD4PubmwDgjF5Ewsm8Tw");'>
+                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Komatsu PC 78US/UU"
+                  style='background-image: url("/foto-foto/scaffoldingku-komatsu-dozer.webp");'>
                 </div>
-                <div class="p-8">
-                  <h4 class="text-charcoal dark:text-white text-xl font-bold mb-4">Sewa Scaffolding</h4>
-                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">Paket sewa Scaffolding /
-                    Steger main frame set lengkap. Kualitas besi tebal standar SNI, aman untuk beban berat.</p>
-                  <ul class="space-y-3 mb-8">
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Main Frame &amp;
-                      Cross Brace
+                <div class="p-6 flex flex-col flex-grow">
+                  <div class="flex justify-between items-start mb-3">
+                    <h4 class="text-charcoal dark:text-white text-lg font-bold">Komatsu PC 78US/UU</h4>
+                    <span
+                      class="bg-green-500/10 text-green-600 px-2 py-0.5 rounded-full text-xs font-bold uppercase">Ready</span>
+                  </div>
+                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-4 flex-grow">Excavator mini
+                    legendaris dengan swing boom. Ideal untuk pekerjaan di lahan sempit, parit, dan urban area.</p>
+                  <ul class="space-y-2 mb-6 text-sm">
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Compact &
+                      Lincah
                     </li>
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Stok Ribuan Set
-                      Ready
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Hemat Bahan
+                      Bakar
                     </li>
                   </ul>
-                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20sewa%20scaffolding" target="_blank"
-                    class="block w-full text-center py-3 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all">Pesan
+                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20sewa%20Komatsu%20PC78" target="_blank"
+                    class="block w-full text-center py-2.5 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all text-sm">Cek
+                    Harga</a>
+                </div>
+              </div>
+
+              <!-- Product 3: Vibro Roller -->
+              <div
+                class="group flex flex-col bg-background-light dark:bg-white/5 rounded-2xl overflow-hidden border border-gray-200 dark:border-gray-800 hover:shadow-2xl transition-all hover:translate-y-[-8px]">
+                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Vibro Roller"
+                  style='background-image: url("/foto-foto/scaffoldingku-vibro.webp");'>
+                </div>
+                <div class="p-6 flex flex-col flex-grow">
+                  <div class="flex justify-between items-start mb-3">
+                    <h4 class="text-charcoal dark:text-white text-lg font-bold">Vibro Roller</h4>
+                    <span
+                      class="bg-green-500/10 text-green-600 px-2 py-0.5 rounded-full text-xs font-bold uppercase">Ready</span>
+                  </div>
+                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-4 flex-grow">Mesin pemadat tanah
+                    untuk proyek jalan, landasan, dan timbunan. Hasil pemadatan merata dan cepat.</p>
+                  <ul class="space-y-2 mb-6 text-sm">
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Pemadatan
+                      Efektif
+                    </li>
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Sewa
+                      Harian/Bulanan
+                    </li>
+                  </ul>
+                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20sewa%20Vibro%20Roller" target="_blank"
+                    class="block w-full text-center py-2.5 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all text-sm">Cek
+                    Harga</a>
+                </div>
+              </div>
+
+              <!-- Product 4: Scaffolding -->
+              <div
+                class="group flex flex-col bg-background-light dark:bg-white/5 rounded-2xl overflow-hidden border border-gray-200 dark:border-gray-800 hover:shadow-2xl transition-all hover:translate-y-[-8px]">
+                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Scaffolding Set"
+                  style='background-image: url("/foto-foto/scaffoldingku-1.webp");'>
+                </div>
+                <div class="p-6 flex flex-col flex-grow">
+                  <div class="flex justify-between items-start mb-3">
+                    <h4 class="text-charcoal dark:text-white text-lg font-bold">Scaffolding Set</h4>
+                    <span
+                      class="bg-green-500/10 text-green-600 px-2 py-0.5 rounded-full text-xs font-bold uppercase">Stok
+                      Banyak</span>
+                  </div>
+                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-4 flex-grow">Steger / Perancah
+                    standar SNI. Paket lengkap: Main Frame, Cross Brace, Jack Base, dan U-Head.</p>
+                  <ul class="space-y-2 mb-6 text-sm">
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Besi Tebal
+                      Galvanis
+                    </li>
+                    <li class="flex items-center gap-2 text-gray-700 dark:text-gray-300">
+                      <span class="material-symbols-outlined text-primary text-base">check_circle</span> Stok Ribuan Set
+                    </li>
+                  </ul>
+                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20sewa%20Scaffolding" target="_blank"
+                    class="block w-full text-center py-2.5 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all text-sm">Pesan
                     Sekarang</a>
-                </div>
-              </div>
-              <div
-                class="group flex flex-col bg-background-light dark:bg-white/5 rounded-2xl overflow-hidden border border-gray-200 dark:border-gray-800 hover:shadow-2xl transition-all hover:translate-y-[-8px]">
-                <div class="w-full aspect-[16/10] bg-cover bg-center" data-alt="Vibro roller and other heavy equipment"
-                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBXShGfcoDsrAIOonvrFl4i0v6BkPF04AMv8jJ2DeYvVR4G7AHlROcVy2VUGE26PxEVgxoGYjokJtyTK-aJzFggsTGVsXyJv3snGtlYS7P-wiv_9Ems6yQJxpVYTDJk6uOwWlnbov9ughNb4h4YnK5kWShyUmklV0S-aOo-Mvl9AxPTVsiiDS2xQ4nxQ5-q4IMT-Yojsp5HHNBsh8dDO8gLD2LMi5BIqP6ZYJTvuZ9lutdbxx94Pi7ZJYzNk8i--rYL19cxAwHr1yE");'>
-                </div>
-                <div class="p-8">
-                  <h4 class="text-charcoal dark:text-white text-xl font-bold mb-4">Pendukung Alat Berat</h4>
-                  <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">Lengkapi kebutuhan proyek
-                    Anda dengan Bulldozer, Crane, dan Vibro Roller untuk infrastruktur di seluruh Indonesia.</p>
-                  <ul class="space-y-3 mb-8">
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Paket Sewa Alat
-                      Lengkap
-                    </li>
-                    <li class="flex items-center gap-2 text-sm text-gray-700 dark:text-gray-300">
-                      <span class="material-symbols-outlined text-primary text-lg">check_circle</span> Sewa Harian /
-                      Bulanan
-                    </li>
-                  </ul>
-                  <a href="https://wa.me/6282216959900?text=Halo%20mau%20tanya%20alat%20berat" target="_blank"
-                    class="block w-full text-center py-3 rounded-lg border-2 border-primary text-primary font-bold hover:bg-primary hover:text-white transition-all">Konsultasi
-                    Gratis</a>
                 </div>
               </div>
             </div>
@@ -267,18 +311,18 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
             <div class="grid grid-cols-2 gap-4">
               <div class="aspect-square bg-cover bg-center rounded-2xl" data-alt="Kobelco bucket detail"
-                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCYjuxsY5rvecx75dWI3yAOp5DiCxpULT1J9utjDrXh0IWJo5nWYc7wK9kG971NCeQutsomipfhBxpsF69kP0mZR6ce1KQTLMzqg5c7SE2EM7DUIiociwuEyachoD7JYvpeoVr7BWeQvYnNo0dlXJS-9YK03-31eoIBGPpUT14WO4wVEP5ul9BnuLLZpsYA-fOYH577mY35tbjrBUaZqJia_6uaZ4zIC9eq4ZtOyqEvkmWiSgpcjuS_zJ8dgZvKfQfr2yo66_zR_Kw");'>
+                style='background-image: url("/foto-foto/scaffoldingku-2.webp");'>
               </div>
               <div class="aspect-square bg-cover bg-center rounded-2xl mt-8"
                 data-alt="Safety helmet and Kobelco machine"
-                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDCwaETQpK-5YcIO5WOYQ40dVSao8_ez42UJg8axXw6aZLaGSaX6O6R105Zt_7nS1tHsxWgdJSr1wrJaiTU9lEOGYaUOC-s_qbV2lIaFiWmX5YFsbiyqe73Lh3l0pCbobKvcw4kj8pm2TdlyvRzBbe8MdiNtX1zO-A-SdFN9LQvhEZcsmDfNp3l8BUEb43G3rcXn-3AJCU4k2IxkSsq6qMVfaq1CS3wpuf84fGGEPQEHbP0JarP1Ugvdz_ehwM1oDR5p_-klE7kAcw");'>
+                style='background-image: url("/foto-foto/scaffoldingku-3.webp");'>
               </div>
               <div class="aspect-square bg-cover bg-center rounded-2xl -mt-8"
                 data-alt="Expert operator inside Kobelco cab"
-                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAMyp6PZ8SFY-bAXiFnRec_7januDSFDhnR4OEy8PGS8GCxfH2hGO0wjOHea_KipiNdvyz2_kfEpmPJs1uFEjFcqOiJEkYM4ynB0dCyliRET8m9GlOXxtAJIP6dSjxdLLE5jTkFoIiwQJ3YwtXNam98x5Rrah0ewVZFJZu-ruXwlxpcLrDjJKcbfQ-tqoXLXSWMj60Zdb1ric23HCHcuF5nMko7ydHwshlVLj9W5z9ptycpylpeCoEura_ti_N2qi0cbNfnmnUgTrI");'>
+                style='background-image: url("/foto-foto/scaffoldingku-4.webp");'>
               </div>
               <div class="aspect-square bg-cover bg-center rounded-2xl" data-alt="Construction project management"
-                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAA2tYd1xkYaBGUBDYMO4Kdn_B0n0VRIoOj233mQnaQtn76RNklJdChEVr8vOI3eXdNLU3I0MKftMMPCKX1flZXb9apGe5j4L_mVmmvmvHxEOa1uO04A-RYzhMNkBMLnrVxUv4vquOy5OkN_doVjttXJyXFcILnTxUuPBm7zBnpH_qumVCUgnKclNpcOjlkFn9mOlWQqxLu9QMQyakf9YewsE_XbvAMN2lzxftalKy825CL8vV9cxGJlsSrUV3vBnRiO89OxqHrxO8");'>
+                style='background-image: url("/foto-foto/scaffoldingku-caterpilar.webp");'>
               </div>
             </div>
             <div class="flex flex-col gap-8">
