chore: rebrand from ScaffoldingKu to SolusiAlatBerat

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- SEO & Ads Optimization -->
-  <title>Sewa Excavator & Scaffolding Bandung - Pusat Rental Alat Berat Terpercaya</title>
+  <title>Sewa Excavator & Alat Berat Indonesia - Solusi Alat Berat Terpercaya</title>
   <meta name="description"
     content="Pusat sewa excavator & alat berat di Bandung. Unit kondisi prima, operator SIO, harga transparan. Melayani proyek di Bandung Raya, Cimahi, Sumedang. Konsultasi Gratis!" />
   <meta name="keywords"
     content="sewa scaffolding indonesia, sewa excavator nasional, rental alat berat indonesia, sewa steger murah, rental scaffolding proyek, sewa beko terdekat" />
-  <link rel="canonical" href="https://scaffoldingku.id/" />
+  <link rel="canonical" href="https://www.solusialatberat.my.id/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://scaffoldingku.id/" />
-  <meta property="og:title" content="Sewa Excavator & Scaffolding Nasional - ScaffoldingKu" />
+  <meta property="og:url" content="https://www.solusialatberat.my.id/" />
+  <meta property="og:title" content="Sewa Excavator & Alat Berat Nasional - SolusiAlatBerat" />
   <meta property="og:description"
     content="Solusi alat berat konstruksi di Bandung. Unit Excavator SK50, SK75, SK200 ready jalan. Harga kompetitif & operator berpengalaman." />
   <meta property="og:image"
@@ -37,7 +37,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "ScaffoldingKu",
+      "name": "SolusiAlatBerat",
       "image": "https://lh3.googleusercontent.com/aida-public/AB6AXuC92CHQ9hXIGrWBZhTwT0-en5tO7MkmODmESfIeXZnv8n49F0BhkBc2LPFTwz23S9eBY_npJJvVuErwvqhT8ghjAx_b7JxjQGanL6LpyM_XnpL_LdMc24acYUe--Oot5oJrqeLSUKOtLzphP4a7wLbsNLHHvgv9anT8PYK8XXq17nISZDl0x0da8rNNtP11YHCg0DmsIWYk4_G0v8dyVRJ4710TjR3ILZZevhsbR-888W1s8s-PSNqPkBIBO-DXHm_JI1sfmolomD8",
       "description": "Pusat Sewa Scaffolding SNI dan Excavator Alat Berat Terlengkap di Bandung.",
       "address": {
@@ -80,7 +80,7 @@
         <div class="flex items-center gap-3">
           <h2
             class="text-charcoal dark:text-white text-xl md:text-3xl font-black leading-tight tracking-tight uppercase">
-            Scaffolding<span class="text-primary">Ku</span></h2>
+            Solusi<span class="text-primary">AlatBerat</span></h2>
         </div>
         <div class="flex flex-1 justify-end gap-8 items-center">
           <nav class="hidden md:flex items-center gap-8">
@@ -416,7 +416,7 @@
                   </div>
                   <p class="text-gray-600 dark:text-gray-400 italic mb-6 flex-grow">"Pengiriman scaffolding 5000 set ke
                     proyek jalan tol di Semarang tepat waktu. Barangnya galvanis semua, lulus inspeksi konsultan. Mantap
-                    ScaffoldingKu."</p>
+                    SolusiAlatBerat."</p>
                   <div>
                     <h4 class="text-charcoal dark:text-white font-bold">Ibu Sari Wijaya</h4>
                     <p class="text-xs text-primary font-semibold uppercase tracking-wide">Project Manager - Jawa Tengah
@@ -435,7 +435,7 @@
                     <span class="material-symbols-outlined text-lg fill-current">star</span>
                   </div>
                   <p class="text-gray-600 dark:text-gray-400 italic mb-6 flex-grow">"Awalnya ragu sewa jarak jauh, tapi
-                    ternyata layanan ScaffoldingKu profesional banget. Unit Excavator Mini sampai di proyek villa Ubud
+                    ternyata layanan SolusiAlatBerat profesional banget. Unit Excavator Mini sampai di proyek villa Ubud
                     dengan aman."</p>
                   <div>
                     <h4 class="text-charcoal dark:text-white font-bold">CV. Bali Membangun</h4>
@@ -555,7 +555,7 @@
         <div class="max-w-[1280px] mx-auto px-4 md:px-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
           <div class="flex flex-col gap-6">
             <div class="flex items-center gap-3">
-              <h2 class="text-3xl font-black uppercase">Scaffolding<span class="text-primary">Ku</span></h2>
+              <h2 class="text-3xl font-black uppercase">Solusi<span class="text-primary">AlatBerat</span></h2>
             </div>
             <p class="text-gray-400 text-sm leading-relaxed">
               Pusat spesialis penyewaan excavator & scaffolding Nasional. Pengalaman lebih dari 12 tahun melayani
@@ -610,7 +610,7 @@
           </div>
         </div>
         <div class="border-t border-white/10 pt-8 text-center text-gray-500 text-xs">
-          <p>© 2024 ScaffoldingKu. All rights reserved. Pusat Sewa Scaffolding & Alat Berat Indonesia.</p>
+          <p>© 2024 SolusiAlatBerat. All rights reserved. Pusat Sewa Scaffolding & Alat Berat Indonesia.</p>
         </div>
       </footer>
     </div>
